Fix grid gap error

--- a/css/style.css
+++ b/css/style.css
@@ -488,9 +488,7 @@ svg {
   .grid-home {
     display: grid;
     grid-template-columns: repeat(2, auto);
-    grid-gap: 5px;
-    grid-column: 50px;
-    grid-row: 50px;
+    grid-gap: 50px;
     justify-content: center;
   }
 
@@ -673,9 +671,7 @@ svg {
   .grid-home {
     display: grid;
     grid-template-columns: repeat(2, auto);
-    grid-gap: 5px;
-    grid-column: 50px;
-    grid-row: 50px;
+    grid-gap: 50px;
     justify-content: center;
   }
 
